--- a/Módulo 03/2023-05-19/fundo.html
+++ b/Módulo 03/2023-05-19/fundo.html
@@ -25,6 +25,31 @@
         max-width: 800px;
         margin: auto;
     }
+    #amare{
+        background-color: yellow;
+        background-image: url(imagens/target001.png);
+        background-size: 100% 100%;
+        height: 500px;
+        width: 1000px;
+        padding: 5px;
+    }
+    #rox{
+        background-color: purple;
+        background-image: url(imagens/target001.png);
+        background-size: 100% 100%;
+        height: 300px;
+        width: 400px;
+    }
+    .container{
+        position: relative;
+    }
+    .conteudo{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+
+        transform: translate(-50%,-50%);
+    }
 </style>
 <body>
     <div>
@@ -49,5 +74,10 @@
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus ea soluta maxime quae eum. Ducimus tempore iste veniam, corporis minima animi fugit deleniti commodi vero unde? Sapiente cum ab et? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias dolorem eveniet corrupti ab, nisi officia, aperiam ullam quasi, minima unde pariatur quidem in reiciendis laboriosam aspernatur vitae. Unde, impedit error. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi veritatis, molestias non voluptate porro officiis facere consectetur doloremque hic deleniti. Suscipit consequatur accusamus corporis inventore qui, nobis sapiente doloribus natus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia doloremque facilis autem facere iure labore quidem porro cupiditate quae illum! Corporis magni beatae nostrum dolore dolores nemo eius, itaque facilis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex ullam, suscipit sequi animi eum quam ipsa sunt molestias dignissimos enim saepe possimus inventore. Autem quam nostrum repudiandae quidem. Asperiores, commodi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae ducimus esse fuga dignissimos aliquid dolor possimus, corrupti sint! Ullam atque exercitationem, id repellendus minima doloremque. Reprehenderit dolor culpa obcaecati nobis.
         </p>
     </div>
+    <section class="container" id="amare">
+        <article class="conteudo" id="rox">
+
+        </article>
+    </section>
 </body>
 </html>
