--- a/Desafios/des12/index.html
+++ b/Desafios/des12/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Cordel Moderno</h1>
-        <p>por <a href="https://www.recantodasletras.com.br/poesias/3186743" rel="external" target="_blank">Milton Duarte</a></p>
+        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" rel="external" target="_blank">Milton Duarte</a></p>
     </header>
     <main>
         <section>
@@ -29,9 +29,9 @@ Vou dizer tudo em poesia.
             </article>
         </section>
         <section>
-            <article>
+            <article id="a2">
                 <p>
-                    <pre>
+                    <pre class="back">
 Não é mais como era antes
 É tudo abreviado
 "Você" só tem duas letras
@@ -68,9 +68,9 @@ Decifre esse rabisco.
             </article>
         </section>
         <section>
-            <article>
+            <article id="a4">
                 <p>
-                    <pre>
+                    <pre class="back">
 Tenho saudade das cartas
 Escritas com a própria mão
 Mandava no mês de Junho
