--- a/Desafios/des12/index.html
+++ b/Desafios/des12/index.html
@@ -113,5 +113,6 @@ Deixe que Deus interprete.
     <footer>
         <p>Site Criado por <a href="https://gustavoguanabara.github.io/" rel="external" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.cursoemvideo.com/" rel="external" target="_blank">Curso em Vídeo</a></p>
     </footer>
+    /*Essa bagaça não tá carregando*/
 </body>
 </html>
