--- a/Desafios/des12/index.html
+++ b/Desafios/des12/index.html
@@ -14,9 +14,8 @@
     </header>
     <main>
         <section>
-            <article>
-                <p>
-                    <pre>
+            <p>
+                <pre>
 Estou ficando cansado
 Da tal tecnologia
 Só se fala por e-mail
@@ -24,14 +23,12 @@ Mensagem curta e fria
 Twitter e Facebook
 Antes que eu caduque
 Vou dizer tudo em poesia.
-                    </pre>
-                </p>
-            </article>
+                </pre>
+            </p>
         </section>
-        <section>
-            <article id="a2">
-                <p>
-                    <pre class="back">
+        <section id="a2">
+            <p>
+                <pre class="back">
 Não é mais como era antes
 É tudo abreviado
 "Você" só tem duas letras
@@ -39,14 +36,12 @@ O "O" e o "E" foi riscado
 Para declarar o amor
 Basta botar uma flor
 E um coração desenhado.
-                    </pre>
-                </p>
-            </article>
+                </pre>
+            </p>
         </section>
         <section>
-            <article>
-                <p>
-                    <pre>
+            <p>
+                <pre>
 Arroba agora não pesa
 É parte de um endereço
 Ponto final nem se usa
@@ -54,8 +49,8 @@ Ou vai até no começo
 Agora é .com
 Se o saite é muito bom
 Ele vale um alto preço.
-                    </pre>
-                    <pre>
+                </pre>
+                <pre>
 Pra piorar a liguagem
 O emoticom é um risco
 Tem símbolo para tudo
@@ -63,14 +58,12 @@ Ponto e vírgula e um asterisco
 Um beijo significa
 Pra entender como fica
 Decifre esse rabisco.
-                    </pre>
-                </p>
-            </article>
+                </pre>
+            </p>
         </section>
-        <section>
-            <article id="a4">
-                <p>
-                    <pre class="back">
+        <section id="a4">
+            <p>
+                <pre class="back">
 Tenho saudade das cartas
 Escritas com a própria mão
 Mandava no mês de Junho
@@ -78,14 +71,12 @@ Só chegava no Verão
 Mas matava a saudade
 Era texto de verdade
 Nas linhas do coração.
-                    </pre>
-                </p>
-            </article>
+                </pre>
+            </p>
         </section>
         <section>
-            <article>
-                <p>
-                    <pre>
+            <p>
+                <pre>
 Agora, escrevo e envio
 Chegando na mesma hora
 Mas quando vou prosear
@@ -93,11 +84,10 @@ A pessoa foi embora
 Abriu outro aplicativo
 O mundo ficou cativo
 Da tecnologia do agora.
-
-                    </pre>
-                </p>
-                <p>
-                    <pre>
+                </pre>
+            </p>
+            <p>
+                <pre>
 Felizmente, pra orar
 Não precisa de internet
 Deus escuta todo mundo
@@ -105,14 +95,12 @@ Se quiser, faça esse teste
 Dois pontos são dois joelhos
 Seus lábios são aparelhos
 Deixe que Deus interprete.
-                    </pre>
-                </p>
-            </article>
+                </pre>
+            </p>
         </section>
     </main>
     <footer>
         <p>Site Criado por <a href="https://gustavoguanabara.github.io/" rel="external" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.cursoemvideo.com/" rel="external" target="_blank">Curso em Vídeo</a></p>
     </footer>
-    /*Essa bagaça não tá carregando*/
 </body>
 </html>
