--- a/Módulo 03/2023-05-23/tabelas.html
+++ b/Módulo 03/2023-05-23/tabelas.html
@@ -15,6 +15,10 @@
         }
         td{
             border: 1px solid black;
+            vertical-align: middle;
+        }
+        .numero{
+            text-align: right;
         }
     </style>
 </head>
@@ -36,12 +40,12 @@
         <tr>
             <td>A2</td>
             <td>B2</td>
-            <td>C2</td>
+            <td class="numero">C2</td>
         </tr>
         <tr>
             <td>A3</td>
             <td>B3</td>
-            <td>C3</td>
+            <td class="numero">C3</td>
         </tr>
         <tr>
             <td>A4</td>
