--- a/Módulo 03/2023-05-23/tabelas-g.html
+++ b/Módulo 03/2023-05-23/tabelas-g.html
@@ -26,6 +26,16 @@
             color: white;
         }
 
+        thead th{
+            position: sticky;
+            top: -1px;
+            background-color: darkblue;
+        }
+
+        tbody tr:nth-child(even){/*even par. odd impar*/
+            background-color: lightblue;
+        }
+
         .num{
             text-align: right;
         }
