--- a/Módulo 03/2023-05-23/tabela-again.html
+++ b/Módulo 03/2023-05-23/tabela-again.html
@@ -16,35 +16,40 @@
             border: 1px solid black;
             padding: 5px;
         }
+        div{
+            overflow-x: auto;
+        }
     </style>
 </head>
 <body>
-    <table>
-        <thead>
-            <tr>
-                <th scope="col">Grupos</th> <th scope="col">Nomes</th> <th colspan="3" scope="colgroup">Filmes</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th rowspan="3" scope="rowgroup">Mulheres</th> <td>Ana Maria</td> <td>alien</td> <td>rambo</td> <td>vingadores</td>
-            </tr>
-            <tr>
-                <td>Beatriz Souza</td> <td>inception</td> <td>hulk</td> <td>batman</td>
-            </tr>
-            <tr>
-                <td>Claudia mello</td> <td>matrix</td> <td>big hero</td> <td>oblivion</td>
-            </tr>
-            <tr>
-                <th rowspan="3" scope="rowgroup">Homens</th> <td>Bruno mendonça</td> <td>intocáveis</td> <td>Amnesia</td> <td>Gladiador</td>
-            </tr>
-            <tr>
-                <td>Daniel Lourenço</td> <td>Wall-e</td> <td>Oldboy</td> <td>Dangal</td>
-            </tr>
-            <tr>
-                <td>Fabiano Mota</td> <td>Star Wars 5</td> <td>Taxi Driver</td> <td>Toy Story</td>
-            </tr>
-        </tbody>
-    </table>
+    <div>
+        <table>
+            <thead>
+                <tr>
+                    <th scope="col">Grupos</th> <th scope="col">Nomes</th> <th colspan="3" scope="colgroup">Filmes</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th rowspan="3" scope="rowgroup">Mulheres</th> <td>Ana Maria</td> <td>alien</td> <td>rambo</td> <td>vingadores</td>
+                </tr>
+                <tr>
+                    <td>Beatriz Souza</td> <td>inception</td> <td>hulk</td> <td>batman</td>
+                </tr>
+                <tr>
+                    <td>Claudia mello</td> <td>matrix</td> <td>big hero</td> <td>oblivion</td>
+                </tr>
+                <tr>
+                    <th rowspan="3" scope="rowgroup">Homens</th> <td>Bruno mendonça</td> <td>intocáveis</td> <td>Amnesia</td> <td>Gladiador</td>
+                </tr>
+                <tr>
+                    <td>Daniel Lourenço</td> <td>Wall-e</td> <td>Oldboy</td> <td>Dangal</td>
+                </tr>
+                <tr>
+                    <td>Fabiano Mota</td> <td>Star Wars 5</td> <td>Taxi Driver</td> <td>Toy Story</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
